--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -27,6 +27,9 @@ body {
   background-size: contain;
   cursor: pointer
 }
+.card {
+  padding: 10px;
+}
 /*适配笔记本*/
 @media screen and (max-height: 750px) {
   body {
@@ -38,9 +41,10 @@ body {
 }
 /*适配手机*/
 @media screen and (max-width: 600px) {
-  .el-card {
+  .card {
     box-shadow: none;
     border: none;
+    padding: 0px;
   }
   body {
     padding-top: 0;
