对于axios返回的结果 使用解构赋值简化代码；服务端不再返回code和message 客户端做对应修改；其他小改动

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -73,7 +73,7 @@ body {
 .el-input-group__prepend {
   background-color: #fff;
   padding: 0 10px;
-  color: #7f7f7f;
+  color: #606266;
   width: 50px;
 }
 .note {
