对于mac和ios 还是使用PingFangSC-Light；scene -> scenario；引入store 保存全局状态；密码改成必填了；开发环境切换onlyid2；其他小改动

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -19,7 +19,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: PingFangSC,"Microsoft YaHei",sans-serif;
+  font-family: PingFangSC-Light,"Microsoft YaHei",sans-serif;
   text-align: center;
   background-image: url('../assets/mask.png');
   background-size: 3000px;
@@ -65,6 +65,7 @@ body {
 }
 .el-button {
   width: 100%;
+  font-family: PingFangSC-Light,"Microsoft YaHei",sans-serif;
 }
 .gradient-hr {
   background:linear-gradient( to right, rgba(220,220,220,0) 0%, rgba(220,220,220,1) 10%, rgba(220,220,220,1) 90%, rgba(220,220,220,0) 100% );
