切换使用flex布局 不再使用media query适配笔记本

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -26,27 +26,16 @@ body {
   background-position: center top;
   background-repeat: no-repeat;
   background-color: #fdfdfd;
-  padding-top: 100px;
   margin: 0;
   color: #303133;
   font-size: 1.4rem;
 }
-.el-card {
+#card1 {
   background-color: #fefefe;
   color: #303133;
 }
 #footer {
-  margin-top: 70px;
   color: #909399;
-}
-/*适配笔记本*/
-@media screen and (max-height: 750px) {
-  body {
-    padding-top: 40px;
-  }
-  #footer {
-    margin-top: 40px;
-  }
 }
 .el-input, .el-button {
   font-size: 1.5rem;
