feat: 开发联调完成重设密码功能

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -14,3 +14,13 @@
     display: flex;
     justify-content: space-between;
 }
+
+.box2 {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.form1 :global .MuiFormControl-root:not(:first-of-type) {
+    margin-top: 10px;
+}
