--- a/src/pages/Support.module.css
+++ b/src/pages/Support.module.css
@@ -32,7 +32,7 @@
 
 .root footer {
     color: #7f7f7f;
-    font-size: 13px;
+    font-size: 0.8125rem;
     margin-top: 40px;
     text-align: center;
 }
