fix: 显示登录账号的button把默认大写去掉

--- a/src/components/AccountLayout/index.module.css
+++ b/src/components/AccountLayout/index.module.css
@@ -28,7 +28,7 @@
         background-size: 3000px;
         background-position: center top;
         background-repeat: no-repeat;
-        background-color: #fdfdfd;
+        background-color: #fafafa;
     }
 
     .card {
