feat: 开始做扫码登录

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -40,3 +40,24 @@
 .signUp .accountBox {
     margin-top: 20px;
 }
+
+.scanLoginBox {
+    display: flex;
+    margin-top: 3rem;
+    justify-content: center;
+}
+
+.scanLogin {
+    cursor: pointer;
+    text-align: center;
+    color: #3f51b5;
+}
+
+.scanLogin :global .material-icons {
+    font-size: 2rem;
+}
+
+.scanLogin p {
+    margin: 0;
+    font-size: 0.8125rem;
+}
