--- a/src/pages/ScanLogin.module.css
+++ b/src/pages/ScanLogin.module.css
@@ -45,9 +45,9 @@
     width: 4rem;
 }
 
-.appDesc p {
+.appDesc .title3 {
     margin-top: 0;
-    font-size: 0.95rem;
+    font-size: 0.9375rem;
 }
 
 .appDesc ul {
