refactor: 优化新用户引导文案

--- a/src/pages/Activate.module.css
+++ b/src/pages/Activate.module.css
@@ -22,3 +22,12 @@
     content: "*";
     font-family: SimSun, sans-serif;
 }
+
+.tipBox {
+    margin-bottom: 30px;
+    margin-top: -20px;
+}
+
+.tipBox p {
+    margin: 0;
+}
