--- a/src/pages/SignUp.module.css
+++ b/src/pages/SignUp.module.css
@@ -1,3 +1,12 @@
 .root :global .accountBox {
     margin-top: 30px;
 }
+
+.tipBox {
+    margin-bottom: 30px;
+    margin-top: -20px;
+}
+
+.tipBox p {
+    margin: 0;
+}
