--- a/src/pages/Activate/index.module.css
+++ b/src/pages/Activate/index.module.css
@@ -1,6 +1,3 @@
-.root {
-}
-
 .form1 {
     margin-top: 1.5rem;
 }
@@ -13,10 +10,10 @@
     margin-top: 0.9rem;
 }
 
-.requiredAsterisk:after {
+.required:after {
     display: inline-block;
     margin-left: 4px;
-    color: #f50057;
+    color: #f44336;
     font-size: 14px;
     line-height: 1;
     content: "*";
@@ -25,9 +22,15 @@
 
 .tipBox {
     margin-bottom: 30px;
-    margin-top: -20px;
+    margin-top: -10px;
 }
 
 .tipBox p {
     margin: 0;
+}
+
+@media (min-width: 600px) {
+    .tipBox {
+        margin-top: -20px;
+    }
 }
