--- a/src/components/ScanLoginButton.module.css
+++ b/src/components/ScanLoginButton.module.css
@@ -1,10 +1,10 @@
-.scanButtonBox {
+.root {
     display: flex;
     margin-top: 4rem;
     justify-content: center;
 }
 
-.scanButton {
+.button {
     cursor: pointer;
     text-align: center;
     color: #3f51b5;
@@ -12,15 +12,15 @@
     border-radius: 0.2rem;
 }
 
-.scanButton:hover {
+.button:hover {
     background-color: rgba(63, 81, 181, 0.04);
 }
 
-.scanButton :global .material-icons {
+.button :global .material-icons {
     font-size: 2rem;
 }
 
-.scanButton p {
+.button p {
     margin: 0;
     font-size: 0.8125rem;
 }
