--- a/src/components/AccountLayout.module.css
+++ b/src/components/AccountLayout.module.css
@@ -45,7 +45,7 @@
             0 1px 3px 0 rgba(0, 0, 0, 0.12);
         min-height: 600px;
         padding: 40px 25px;
-        background-color: #fdfdfd;
+        background-color: white;
         border-radius: 4px;
     }
 }
