feat: 增加登录页背景

--- a/src/pages/Account/index.module.css
+++ b/src/pages/Account/index.module.css
@@ -29,7 +29,7 @@
 }
 
 @media (min-width: 600px) {
-    .root {
+    .root.bg {
         background-image: url("../../assets/mask.png");
         background-size: 3000px;
         background-position: center top;
