--- a/src/components/AvatarUpload.module.css
+++ b/src/components/AvatarUpload.module.css
@@ -8,12 +8,28 @@
 
 .root img {
     border-radius: 5%;
+    vertical-align: middle;
+    width: 100px;
 }
 
-.root .title {
-    margin: 5px 0;
+.root :global .material-icons {
+    font-size: 98px;
+    color: #bbb;
+    cursor: pointer;
+    vertical-align: middle;
+    border: 1px dashed #d9d9d9;
+    border-radius: 5%;
+}
+
+.title {
+    margin-top: 5px;
+    display: inline-block;
+}
+
+.title.required {
+    color: #f44336;
 }
 
 .root :global .tip {
-    margin-top: 0;
+    margin-top: 1px;
 }
