--- a/src/pages/Account/Choose.module.css
+++ b/src/pages/Account/Choose.module.css
@@ -1,3 +1,8 @@
+.root :global .tip {
+    margin-left: 10px;
+    margin-top: 1.9rem;
+}
+
 .listBox {
     margin-top: 0.5rem;
 }
@@ -10,6 +15,7 @@
     display: flex;
     border-bottom: solid 1px #eee;
     align-items: center;
+    padding-left: 10px;
 }
 
 .item.hover {
@@ -53,13 +59,13 @@
 }
 
 .nickname {
-    font-size: 1.2rem;
-    margin-top: 0.1rem;
+    font-size: 18px;
+    margin-top: 2px;
     margin-bottom: 0;
 }
 
 .account {
-    margin-top: 0.2rem;
+    margin-top: 4px;
     margin-bottom: 0;
     color: #7f7f7f;
 }
