--- a/src/pages/Account/Choose.module.css
+++ b/src/pages/Account/Choose.module.css
@@ -1,5 +1,5 @@
 .root :global .tip {
-    margin-left: 10px;
+    margin-left: 6px;
     margin-top: 1.9rem;
 }
 
@@ -15,7 +15,7 @@
     display: flex;
     border-bottom: solid 1px #eee;
     align-items: center;
-    padding-left: 10px;
+    padding-left: 6px;
 }
 
 .item.hover {
@@ -27,7 +27,7 @@
     align-items: center;
     cursor: pointer;
     flex-grow: 1;
-    padding: 0.4rem 0;
+    padding: 6px 0;
 }
 
 .loginStatus {
