--- a/src/components/AvatarUpload.module.css
+++ b/src/components/AvatarUpload.module.css
@@ -14,7 +14,7 @@
 
 .root :global .material-icons {
     font-size: 98px;
-    color: #bbb;
+    color: #ccc;
     cursor: pointer;
     vertical-align: middle;
     border: 1px dashed #d9d9d9;
