fix: 修复google fonts在国内不可用的bug

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,34 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+    font-family: "Material Icons";
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://cdn.jsdelivr.net/npm/material-icons@1.13.1/iconfont/material-icons.woff2)
+            format("woff2"),
+        url(https://cdn.jsdelivr.net/npm/material-icons@1.13.1/iconfont/material-icons.woff)
+            format("woff");
+}
+
+.material-icons {
+    font-family: "Material Icons";
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: "liga";
+}
+
 /* reset mui start */
 .MuiFormHelperText-root {
     font-size: 13px;
