--- a/src/pages/Account/ScanLogin.module.css
+++ b/src/pages/Account/ScanLogin.module.css
@@ -20,7 +20,7 @@
 .downloadButtonBox {
     display: flex;
     justify-content: center;
-    margin-top: 1.5rem;
+    margin-top: 30px;
 }
 
 .accountButtonBox {
@@ -102,9 +102,4 @@
     width: 1px;
     background-color: #e8e8e8;
     margin: 0 2rem;
-}
-
-.keepLoggedInBox {
-    text-align: center;
-    margin-top: 0.2rem;
 }
