--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,7 @@ body {
 
 @font-face {
     font-family: "iconfont"; /* Project id 545468 */
-    src: url("//at.alicdn.com/t/font_545468_uxcwqgt1mw.woff2?t=1622972228087") format("woff2"),
-        url("//at.alicdn.com/t/font_545468_uxcwqgt1mw.woff?t=1622972228087") format("woff"),
-        url("//at.alicdn.com/t/font_545468_uxcwqgt1mw.ttf?t=1622972228087") format("truetype");
+    src: url("https://at.alicdn.com/t/font_545468_uxcwqgt1mw.woff2?t=1622972228087") format("woff2");
 }
 
 .iconfont {
@@ -22,10 +20,8 @@ body {
     font-family: "Material Icons";
     font-style: normal;
     font-weight: 400;
-    src: url(https://cdn.jsdelivr.net/npm/material-icons@1.13.1/iconfont/material-icons.woff2)
-            format("woff2"),
-        url(https://cdn.jsdelivr.net/npm/material-icons@1.13.1/iconfont/material-icons.woff)
-            format("woff");
+    src: url(https://registry.npmmirror.com/material-icons/1.13.1/files/iconfont/material-icons.woff2)
+        format("woff2");
 }
 
 .material-icons {
